fix: Preview width if stack rows are too wide (#54)

--- a/static/app.css
+++ b/static/app.css
@@ -76,23 +76,25 @@ body {
 
 .error-frames {
   display: flex;
-  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  gap: 40px;
 }
 
 .frame-preview {
   background: #fff;
-  width: 50%;
+  flex: 1 1 400px;
   box-shadow: 0px 0px 9px #d3d3d3;
   height: 100%;
   box-sizing: border-box;
   overflow: auto;
+  width: 100%;
 }
 
 .frame-stack {
-  margin-right: 40px;
-  flex: 1;
+  flex: 1 1 300px;
   padding: 10px 0;
   box-sizing: border-box;
+  width: 100%;
 }
 
 .frames-list {
@@ -220,16 +222,4 @@ code[class*="language-"], pre[class*="language-"] {
   display: none;
 }
 
-@media only screen and (max-width: 970px) {
-  .error-frames {
-    flex-direction: column-reverse;
-  }
 
-  .frame-preview {
-    width: 100%;
-  }
-
-  .frame-stack {
-    width: 100%;
-  }
-}
